.gitignoreファイルの編集

--- a/.gitignore
+++ b/.gitignore
@@ -45,19 +45,48 @@ yarn-debug.log*
 /helpers/*
 !/application_helper.rb
 
-/stylesheets/comments.scss
-/stylesheets/likes.scss
-/stylesheets/pages.scss
-/stylesheets/posts.scss
-/stylesheets/relationships.scss
+comments.scss
+likes.scss
+pages.scss
+posts.scss
+relationships.scss
 
-/views/comments
-/views/likes
 
-/initializers/application_controller_renderer.rb
-/initializers/backtrace_silencers.rb
-/initializers/content_security_policy.rb
-/initializers/inflections.rb
-/initializers/mime_types.rb
+application_controller_renderer.rb
+backtrace_silencers.rb
+content_security_policy.rb
+inflections.rb
+mime_types.rb
 
-/locales/en.yml
+en.yml
+
+.git/
+
+channels/
+jobs/
+
+lib/
+log/
+storage/
+
+vendor/
+
+bin/
+
+
+.ruby-version
+babel.config.js
+config.ru
+
+development.sqlite3
+schema.rb
+test.sqlite3
+test.sqlite3-0
+test.sqlite3-1
+
+/webpack/
+boot.rb
+cable.rb
+credential.yml.enc
+
+public/
