gitignoreファイルの編集

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,54 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+.env
+
+/helpers/*
+!/application_helper.rb
+
+comments.scss
+likes.scss
+pages.scss
+posts.scss
+relationships.scss
+
+
+application_controller_renderer.rb
+backtrace_silencers.rb
+content_security_policy.rb
+inflections.rb
+mime_types.rb
+
+en.yml
+
+.git/
+
+channels/
+jobs/
+
+lib/
+log/
+storage/
+
+vendor/
+
+bin/
+
+
+.ruby-version
+babel.config.js
+config.ru
+
+development.sqlite3
+schema.rb
+test.sqlite3
+test.sqlite3-0
+test.sqlite3-1
+
+/webpack/
+boot.rb
+cable.rb
+credential.yml.enc
+
+public/
